--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
@@ -403,7 +404,7 @@
 					<h2>Contactanos</h2>
 					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet nam itaque ipsam iste provident quo ipsam iste provident.</p>
 				</div>
-				<form action="#" method="post">
+				<form action="index.php" method="post">
 					<div class="row">
 						<div class="col-md-6">
 							<div class="form-group">
